# livox_scanner

./: LICENSE  README.md
doc/cn/: README.md
scanner_publisher/: CMakeLists.txt  can_config.sh  package.xml
scanner_publisher/config/: livox_rviz_show_only.rviz
scanner_publisher/launch/: scanner.launch
scanner_publisher/src/: pointcloud_publisher.cpp  speed_config.txt
